# Yare

./: .gitignore  .gitmodules  .swp  Backlog.txt  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  TODO  appveyor.yml  build.bat  buildlinux.sh  main.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp
YareEngine/: CMakeLists.txt
YareEngine/Lib/stb/: stb_image.h
YareEngine/Res/Shaders/: gui.vert  skybox.vert  skyboxVert.spv  textureShader.frag  texture_array.frag  texture_array.shader  texture_arrayFrag-fix.spv  texture_arrayFrag.spv
YareEngine/Res/Shaders/GUI/: guiFrag.spv
YareEngine/Res/Shaders/LongLoop/: texture_array.frag  texture_array.vert  texture_arrayFrag.spv  texture_arrayVert.spv
YareEngine/Res/Shaders/TextureArray/: texture_arrayVert.spv
YareEngine/Res/Shaders/TextureArrayDiffuse/: texture_array_diffuse.frag  texture_array_diffuse.shader  texture_array_diffuse.vert  texture_array_diffuseFrag.spv  texture_array_diffuseVert.spv
YareEngine/Resources/Shaders/: gui.frag  skybox.frag  skybox.shader  texture.shader  texture_array.vert
YareEngine/Source/: Yare.h
YareEngine/Source/Application/: Application.cpp  Application.h  EntryPoint.h  GlobalSettings.h
YareEngine/Source/Core/: Core.h  DataStructures.h  Glfw.h  Memory.cpp  Memory.h  Transform.cpp  Transform.h  Yzh.h
YareEngine/Source/Graphics/: AssetLoader.cpp  AssetLoader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  MeshInstance.cpp  MeshInstance.h  RenderManager.cpp  RenderManager.h  TiledMesh.cpp  TiledMesh.h
YareEngine/Source/Graphics/Camera/: Camera.cpp  Camera.h  FpsCamera.cpp  FpsCamera.h  YzCamera.h
YareEngine/Source/Graphics/Components/: Component.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Transform.cpp  Transform.h
YareEngine/Source/Graphics/Renderers/: ForwardRenderer.cpp  ForwardRenderer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  Renderer.cpp  Renderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h  YzRenderer.cpp  YzRenderer.h
YareEngine/Source/Graphics/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
YareEngine/Source/Graphics/Vulkan/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Context.cpp  Context.h  DescriptorSet.cpp  DescriptorSet.h  Devices.cpp  Devices.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Renderpass.cpp  Renderpass.h  Semaphore.cpp  Semaphore.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Utilities.cpp  Utilities.h  Vk.h
YareEngine/Source/Graphics/Window/: GlfwWindow.cpp  GlfwWindow.h  Window.h  YzWindow.h
YareEngine/Source/Input/: InputHandler.h  KeyHandler.cpp  KeyHandler.h  MouseHandler.cpp  MouseHandler.h  YzInputHandler.h
YareEngine/Source/Utilities/: IOHelper.cpp  IOHelper.h  Logger.cpp  Logger.h  T_Singleton.h
YareZo/: CMakeLists.txt  YareZo.h
YareZo/Engine/: YareZo.h
YareZo/Engine/Application/: Application.cpp  Application.h  EntryPoint.h  GlobalSettings.h
YareZo/Engine/Core/: Core.h  DataStructures.h  Glfw.h  Memory.cpp  Memory.h  Transform.cpp  Transform.h  YzCamera.h  YzInputHandler.h  YzWindow.h  Yzh.h
YareZo/Engine/Graphics/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  MeshInstance.cpp  MeshInstance.h  Model.cpp  Model.h  RenderCommand.h  RenderManager.cpp  RenderManager.h  TiledMesh.cpp  TiledMesh.h  Vulkan.cpp  Vulkan.h
YareZo/Engine/Graphics/Camera/: Camera.cpp  Camera.h  YzCamera.h
YareZo/Engine/Graphics/Gui/: VulkanImGui.cpp  VulkanImGui.h
YareZo/Engine/Graphics/Renderers/: ForwardRenderer.cpp  ForwardRenderer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h  YzRenderer.cpp  YzRenderer.h
YareZo/Engine/Graphics/Scene/: Scene.cpp  Scene.h
YareZo/Engine/Graphics/Vulkan/: Vk_Buffer.cpp  Vk_Buffer.h  Vk_CommandBuffer.cpp  Vk_CommandBuffer.h  Vk_CommandPool.cpp  Vk_CommandPool.h  Vk_DescriptorSet.cpp  Vk_DescriptorSet.h  Vk_Devices.cpp  Vk_Devices.h  Vk_Framebuffer.cpp  Vk_Framebuffer.h  Vk_Image.cpp  Vk_Image.h  Vk_Instance.cpp  Vk_Instance.h  Vk_Pipeline.cpp  Vk_Pipeline.h  Vk_Renderer.cpp  Vk_Renderer.h  Vk_Renderpass.cpp  Vk_Renderpass.h  Vk_Semaphore.cpp  Vk_Semaphore.h  Vk_Shader.cpp  Vk_Shader.h  Vk_Swapchain.cpp  Vk_Swapchain.h  Vk_Utilities.cpp  Vk_Utilities.h
YareZo/Engine/Graphics/Window/: GlfwWindow.cpp  GlfwWindow.h  YzWindow.h
YareZo/Engine/Handlers/: KeyHandler.cpp  KeyHandler.h  MouseHandler.cpp  MouseHandler.h
YareZo/Engine/Input/: KeyHandler.cpp  KeyHandler.h  MouseHandler.cpp  MouseHandler.h
YareZo/Engine/Platform/Vulkan/: Vk.h  (+30 more)
YareZo/Engine/Utilities/: IOHelper.cpp  IOHelper.h  Logger.cpp  Logger.h  T_Singleton.h  YzLogger.cpp  YzLogger.h
YareZo/Platform/Vulkan/: Vk.h  Vk_Buffer.cpp  Vk_Buffer.h  Vk_CommandBuffer.cpp  Vk_CommandBuffer.h  Vk_CommandPool.cpp  Vk_DescriptorSet.cpp  Vk_DescriptorSet.h  Vk_Devices.cpp  Vk_Devices.h  Vk_Framebuffer.cpp  Vk_Framebuffer.h  Vk_Image.cpp  Vk_Image.h  Vk_Instance.cpp  Vk_Instance.h  Vk_Pipeline.cpp  Vk_Pipeline.h  Vk_Renderer.cpp  Vk_Renderer.h  Vk_Renderpass.cpp  Vk_Renderpass.h  Vk_Shader.cpp  Vk_Swapchain.cpp  Vk_Swapchain.h  Vk_Utilities.cpp  Vk_Utilities.h
YareZo/Resources/Shaders/: dynamicTexture.vert  dynamicTextureFrag.spv  dynamicTextureVert.spv  dynamicUBO.shader  gui.shader  guiVert.spv  skyboxFrag.spv  texture.shader  textureShader.frag  textureShader.vert  texture_array.frag  texture_array.shader  ubo.shader  uboShader.frag  uboShader.vert
YareZo/Shaders/: basictriangle.vert  basictrianglevert.spv  uboShader.vert
YareZo/Utilities/: IOHelper.cpp  IOHelper.h  T_Singleton.h  YzLogger.cpp  YzLogger.h
YareZo/Windows/: GlfwWindow.cpp  GlfwWindow.h
YareZo/src/: Application.cpp  Application.h  Core.h  DataStructures.h  EntryPoint.h  Vulkan.cpp  Vulkan.h  Window.h  YzCamera.cpp  YzCamera.h  YzInput.cpp  YzInput.h  YzKeyHandler.cpp  YzKeyHandler.h
YareZo/src/handlers/: Handler.h  YzInputHandler.h  YzKeyHandler.cpp  YzKeyHandler.h  YzMouseHandler.cpp  YzMouseHandler.h  YzScrollHandler.cpp  YzScrollHandler.h
(+104 files in other folders)
